Fixed links spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ h1, h2, h3, h4 {
 
 .links {
   text-align: center;
+  padding-top: 10px;
 }
 .links li {
   display: inline-block;
